--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -4,7 +4,6 @@
   переключая тему
 */
 
-
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
@@ -17,11 +16,30 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
 
-  --h1-title-color: #DB00FF;
-  --title-text-color: #FF0070;
+  --h1-title-color: #db00ff;
+  --title-text-color: #ff0070;
   --decorated-text-color: #000028;
-  --decor-color: #FF0070;
-  --main-text-color: #F1B2CE;
+  --decor-color: #ff0070;
+  --main-text-color: #f1b2ce;
   --opacity-border-color-button: rgba(255, 0, 112, 0.4);
-  --text-shadow-color: #FF0070;
+  --text-shadow-color: #ff0070;
+}
+:root.theme-dark {
+  --h1-title-color: #db00ff;
+  --title-text-color: #ff0070;
+  --decorated-text-color: #000028;
+  --decor-color: #ff0070;
+  --main-text-color: #f1b2ce;
+  --opacity-border-color-button: rgba(255, 0, 112, 0.4);
+  --text-shadow-color: #ff0070;
+}
+.rec-text {
+  position: absolute;
+  width: 33px;
+  height: 26px;
+  text-transform: uppercase;
+  font-size: 18px;
+  color: var(--decor-color);
+  right: 48px;
+  top: 20px;
 }
