--- a/src/styles/light.css
+++ b/src/styles/light.css
@@ -3,54 +3,46 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-/* :root.theme-light {
-  --h1-title-color: #FFC2E6;
-  --title-text-color: #353430;
-  --decorated-text-color: #353430;
-  --decor-color: #FF8DCB;
-  --main-text-color: #353430;
-  --opacity-border-color-button: rgba(50, 49, 45, 0.4);
-  --text-shadow-color: #FFC2E6;
-} */
 
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --h1-title-color: #FFC2E6;
+  --h1-title-color: #ffc2e6;
   --title-text-color: #353430;
   --decorated-text-color: #353430;
-  --decor-color: #FF8DCB;
+  --decor-color: #ff8dcb;
   --main-text-color: #353430;
   --opacity-border-color-button: rgba(50, 49, 45, 0.4);
-  --text-shadow-color: #FFC2E6;
+  --text-shadow-color: #ffc2e6;
 
-    background-color: #FFF1F7;
-    background-image: url(../images/cover-image-light.png);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-
-
-  }
+  background-color: #fff1f7;
+  background-image: url(../images/cover-image-light.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.page.theme_light .rec-text {
+  display: none;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
-        /* Дублируем переменные светлой темы */    
-        --h1-title-color: #FFC2E6;
-        --title-text-color: #353430;
-        --decorated-text-color: #353430;
-        --decor-color: #FF8DCB;
-        --main-text-color: #353430;
-        --opacity-border-color-button: rgba(50, 49, 45, 0.4);
-        --text-shadow-color: #FFC2E6;
-    }
+    /* Дублируем переменные светлой темы */
+    --h1-title-color: #ffc2e6;
+    --title-text-color: #353430;
+    --decorated-text-color: #353430;
+    --decor-color: #ff8dcb;
+    --main-text-color: #353430;
+    --opacity-border-color-button: rgba(50, 49, 45, 0.4);
+    --text-shadow-color: #ffc2e6;
+  }
   .page {
     background-image: url(../images/cover-image-light.png);
   }
-  .rec-text {
+  .page.theme_auto .rec-text {
     display: none;
   }
 }
