--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -24,22 +24,11 @@
   --opacity-border-color-button: rgba(255, 0, 112, 0.4);
   --text-shadow-color: #ff0070;
 }
-:root.theme-dark {
-  --h1-title-color: #db00ff;
-  --title-text-color: #ff0070;
-  --decorated-text-color: #000028;
-  --decor-color: #ff0070;
-  --main-text-color: #f1b2ce;
-  --opacity-border-color-button: rgba(255, 0, 112, 0.4);
-  --text-shadow-color: #ff0070;
+.page.theme_dark .rec-text {
+  display: block;
 }
-.rec-text {
-  position: absolute;
-  width: 33px;
-  height: 26px;
-  text-transform: uppercase;
-  font-size: 18px;
-  color: var(--decor-color);
-  right: 48px;
-  top: 20px;
+@media (prefers-color-scheme: dark) {
+  .rec-text {
+    display: block;
+  }
 }
