--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -11,4 +11,5 @@
   --main-text-color: #f1b2ce;
   --opacity-border-color-button: rgba(255, 0, 112, 0.4);
   --text-shadow-color: #ff0070;
+  --decor-angles-color: #ff0070;
 }
