--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -23,6 +23,7 @@
   --main-text-color: #f1b2ce;
   --opacity-border-color-button: rgba(255, 0, 112, 0.4);
   --text-shadow-color: #ff0070;
+  --decor-angles-color: #ff0070;
 }
 .page.theme_dark .rec-text {
   display: block;
